--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <button type="submit">Send</button>
   </p>
 </form></div>
-	<div class="grid-item grid-item-10"10><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:JJThe Post-National State</a><h4><a href="https://buchanan.org/blog/the-dc-statehood-power-grab-149601">
+	<div class="grid-item grid-item-10"10><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a><h4><a href="https://buchanan.org/blog/the-dc-statehood-power-grab-149601">
 	If DC gets Statehood</a></h4></div> 
 	
 	<div class="grid-item grid-item-11"11<h1><p><a href="https://cis.org/Arthur/Border-Chaos-Gets-Worse-and-Will-Get-Worse-Yet">Center For Immigration Studies</a></p></h1>
