--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 </div>
 
-<img src="20210927_113717.jpg" width="100px" height="400px"> <img>
+<img src="20210927_113717.jpg"><img>
 
 </body>
 </html>
